# SmallestGraphicsEngine

./: .gitignore  CMakeLists.txt  README.md  RENAME_INSTRUCTIONS.md  TUTORIAL.md  build.ps1  build_and_run.ps1  imgui.ini  quick_build.ps1
models/: README.md  T.glb
shaders/: debug_depth.frag  depth.frag  pbr.frag  pbr.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert
skybox/: README.md
src/: Camera.h  Model.h  Shader.h  main.cpp
